--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.influxdb.username=user
 spring.influxdb.password=user
 spring.influxdb.database=Share
 
+server.port=${port:7071}
+
 spring.scrapper.watchmarketurl=http://www.tsetmc.ir/tsev2/data/MarketWatchPlus.aspx
 spring.scrapper.method=GET
 spring.scrapper.buffersize=33554432
